2Update index.html

--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="index.html" class="image">
-									<span class="symbol"><img src="images/TOJOSOA.jpg" alt="" /></span><h1 style="color: green;">DigitalEvolution (Tojosoa Nathanaël)</h1>
-
+								<a href="index.html" class="logo">
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">DigitalEvolution</span>
 								</a>
 
 							<!-- Nav -->
@@ -193,26 +192,10 @@
 							<section>
 								<h2>Follow</h2>
 <ul class="icons">
-  <li>
-    <a href="tel:+261345548159" class="icon solid style2 fa-phone">
-      <span class="label">Phone</span>
-    </a>
-    <span>+261 34 55 48 159 / +261 37 60 74 772</span>
-  </li>
-  <li>
-    <a href="mailto:tojomailpro@gmail.com" class="icon solid style2 fa-envelope">
-      <span class="label">Email</span>
-    </a>
-    <span>tojomailpro@gmail.com</span>
-  </li>
-  <li>
-    <a href="https://www.linkedin.com/in/tojosoa-randriamampianina-72b7782b" class="icon brands style2 fa-linkedin-in" target="_blank">
-      <span class="label">LinkedIn</span>
-    </a>
-    <span>Tojosoa Randriamampianina</span>
-  </li>
+  <li><a href="tel:+261345548159/+2610376074772" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
+  <li><a href="tojomailpro@gmail.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+  <li><a href="https://www.linkedin.com/in/tojosoa-randriamampianina-72b7782b" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 </ul>
-
 							</section>
 							<ul class="copyright">
 								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
